--- a/moviemash-backend/composer.json
+++ b/moviemash-backend/composer.json
@@ -10,8 +10,9 @@
     }
   ] ,
   "require": {
-    
-  },
+    "ext-json": "*" ,
+    "ext-mysqli": "*"
+  } ,
   "require-dev": {
     "phpunit/phpunit": "9"
   }
