Database now gets credentials from a db.config file

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ moviemash-backend/vendor
 
 # PHPUnit output files
 .phpunit.result.cache
+
+# Database credentials file
+moviemash-backend/db_conn/db.config
