--- a/moviemash-frontend/package.json
+++ b/moviemash-frontend/package.json
@@ -34,5 +34,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage_comment": "Change homepage to where you are deploying the site",
+  "homepage": "http://ewanbrown.co.uk/moviemash/",
   "proxy": "http://localhost:2999/"
 }
